# OpenComptage

./: .gitignore  .gitmodules  .travis.yml  404.html  Dockerfile  Dockerfile-test  README.md  README.org  development.org  docker-compose.yml  index.html  manage.py  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.in  requirements.txt  settings.py
.docker/: Dockerfile  docker-compose.travis.yml  docker-compose.yml  docker-compose_dev_env.yml  docker-compose_test_env.yml  run_test.sh
.docker/tests/: test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  doc.yml  release.yml  test.yml
comptages/: Comptages.py  Comptages_dockwidget.py  Comptages_dockwidget_base.ui  Makefile  README.html  README.txt  __init__.py  comptages.py  definitions.py  filter_dialog.py  metadata.txt  parser.py  pb_tool.cfg  resources.py  resources.qrc  settings.py  utils.py
comptages/basedata/: category.csv  category.csvt  class.csv  class_category.csv  device.csv  device.csvt  installation.csv  lane.csv  model.csv  municipality.csv  municipality.csvt  municipality.qmd  section.csvt  sector.csvt  sector.prj  sensor.csv  sensor_type_class.csvt  sensor_type_installation.csv  sensor_type_model.csv
comptages/chart/: chart_dialog.py
comptages/config/: config_creator.py
comptages/core/: bulk_create_manager.py  chart_dialog.py  definitions.py  delete_dialog.py  filter_dialog.py  import_files.py  importer.py  importer_task.py  layers.py  report.py  report_task.py  settings.py  statistics.py  tjm.py  utils.py  yearly_report_dialog.py
comptages/data/: count_data.py  data_importer.py  data_importer_int2.py  data_importer_vbv1.py  data_loader.py  day_data.py  direction_data.py  hour_data.py
comptages/datamodel/: apps.py  (+2 more)
db/: audit.sql  base_tjm_ok.sql  base_tjm_ok_data_transfer.sql  brand.csv  category.csv  class.csv  class_category.sql  comptages.sql  domain_data.sql  generated_model_script.sql  installation.csv  installation.csvt  model.csvt  model.dbm  model_2.dbm  model_2_bak_20180829_0959.dbm  model_2_bak_20180829_1152.dbm  model_class.csv  rights.sql  section.csv  section.csvt  sensor_type.csv  sensor_type.csvt  test_data.sql
development/: index.html
docs/: development.md  engineering.org  enginnering.org  index.html  index.md  index.org  installation.md  project_management.org  user_manual.md
installation/: index.html
scripts/: create_data_model_sql_script.sh  create_db.sh  insert_test_data.sh  rebuild_docker_test.sh  run_docker_dev.sh  run_docker_test.sh  run_functional_tests.sh  run_test_on_docker.sh  start_docker.sh  start_docker_test.sh  stop_docker.sh  transfer_base_tjm_ok.py
search/: search_index.json
test_data/: 00056365.A00  00056520.V01  00056520.V02  00056520.V03  00056520.V04  00056520.V05  00056520.V0A  10020260.A01  53409999.V04  64210836_TCHO-Capitaine.txt  data_loader_simple_aggregate.i00  data_loader_simple_detail.V01  dev.qgz  setup.py.qgz  simple_aggregate_multi_channel.i00  simple_aggregate_multi_spec.i00  simple_aggregate_special_case.A01  simple_detail_special_case.V01  speed_chart_aggregate.i00  speed_chart_detail.V01  time_chart_aggregate.i00  time_chart_aggregate_direction.i00
user_manual/: index.html
(+1625 files in other folders)
