[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "comptages"
version = "0.1"
dynamic = ["dependencies"]

[project.optional-dependencies]
check = ["pyright>=1.1.36", "black>=23.11.0", "qgis-plugin-ci>=2.8.1"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.qgis-plugin-ci]
plugin_path = "comptages"
github_organization_slug = "opengisch"
project_slug = "OpenComptage"

[tool.pyright]
pythonVersion = "3.10"
exclude = [
    "**/nodes_modules",
    "**/__pycache__",
    "**/migrations",
    "**/qgissettingmanager",
    "**/test",
    ".venv/",
]
useLibraryCodeForTypes = true
reportMissingImports = false
reportUndefinedVariable = false
reportInvalidStringEscapeSequence = "error"

[tool.setuptools]
package-dir = { "" = "comptages" }

[tool.isort]
profile = "black"
src_paths = ["comptages"]
skip_glob = ["**/*/migrations"]

[tool.black]
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | qgissettingmanager
)/
'''
