[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "comptages" }

[project]
name = "comptages"
version = "0.1"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.test = { file = "requirements-test.txt" }

[tool.coverage.run]
omit = ["*/migrations/*", "*/qgissettingmanager/*"]

[tool.pyright]
pythonVersion = "3.10"
exclude = [
    "**/nodes_modules",
    "**/__pycache__",
    "**/migrations",
    "**/qgissettingmanager",
    "**/test",
]
reportMissingImports = false
useLibraryCodeForTypes = true

[tool.isort]
profile = "black"
src_paths = ["comptages"]
skip_glob = ["**/*/migrations"]

[tool.black]
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | qgissettingmanager
)/
'''

[tool.qgis-plugin-ci]
plugin_path = "comptages"
github_organization_slug = "opengisch"
project_slug = "OpenComptage"
